--- a/src/App.css
+++ b/src/App.css
@@ -1,89 +1,26 @@
-
 body{
-  background-color: lightgrey;
   margin: 0;
-  
+  padding: 0;
+  background-color: lightgrey;
 }
-.title{
-  background-color: white;
-  height: 50px;
-  font-size: 20px;
-text-align: center;
-position: sticky;
-display: flex;
-align-items: center;
-box-shadow: 0px 10px 13px -7px #000000, 0px 30px 44px -8px rgba(0,0,0,0.23);}
-.home{
-  background-color: white;
-  height: 660px;
-  width: 1000px;
-  
-  
+
+.App{
+  width: 100%;
+  min-height: 100vh;
 }
-.Active{
+main{
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.active{
-  width: 400px;
-  height: 250px;
-  border: solid 2px lightgray;
-  border-radius: 10px;
-  /* align-items: center; */
-  margin-top: 59px;
-  margin-left: 59px;
-  text-align: center;
-  box-shadow:2px 2px 2px gray;
+.main{
+  background-image: url(https://tiptreks.net/wp-content/uploads/2020/12/central-embassy.jpg);
+  background-size: cover;
+  width: 1200px;
+  height: 730px;
 }
-.link{
-  font-size: 50px;
-  text-decoration: none;
-  /* align-items: center; */
-  position: relative;
-  top: 80px;
-  color: lightskyblue;
-}
-.active:hover{
-  background-color: black;
-  /* color: white; */
-}
-.product{
-  display: flex;
-  background-color: white;
-  width: 1000px;
-  height: 720px;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.item{
-  width: 200px;
-  height: 330px;
-  background-color: white;
-  border: solid 2px black;
-  border-radius: 10px;
-  margin-top: 20px;
-  margin-left: 20px;
+a{
   text-decoration: none;
 }
-.link2{
-  text-decoration: none;
+a:any-link{
   color: black;
-  text-align: center;
-  
-}
-img{
-  position: relative;
-  top: 10px;
-  left: 30px;
-}
-p{
-  font-size: 20px;
-  position: relative;
-  top: 20px;
-}
-.price{
-  font-size: 30px;
-  font-weight: 700;
-  position: relative;
-  top: 30px;
 }
